--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ googleplus_link: http://plus.google.com
 markdown: kramdown
 plugins:
   - jekyll-feed
+  - jekyll-responsive-image
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
