refactor smart corp files

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,24 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
+# The slogan describes your website and is used on homepage in <title> and other important places
+slogan: 'Building the Next Wave of Technology together'
+
+# This is for the editing function in _/includes/improve_content
+# Leave it empty if your site is not on GitHub/GitHub Pages
+improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
+
+# This URL points directly to the images directory making
+# things easier to link to images in posts and templates. It needs a slash at the end.
+#
+# Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
+# Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
+#
+urlimg: 'https://phlow.github.io/images/'
+
+# Logo size is 600x80 pixels
+logo: "logo.png"
+
 # Company Information
 company_name: SMART Corporation
 address_line: 8 Fairlawn Ln, Suite 1-101, Lexington, MA 02420-2728, USA
