--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@
   dropdown:
   - title: "FinTech Consulting"
     url: "/fintech/"
-  - title: "TInformation Technology Consulting"
+  - title: "Information Technology Consulting"
     url: "/infotech/"
   - title: "Marketing and Strategy Consulting"
     url: "/marketing-strategy/"
