--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
+# ASCII Font: http://patorjk.com/software/taag/#p=display&f=Slant&t=ZAlam
+#      _____ _ __          _____      __  __  _
+#     / ___/(_) /____     / ___/___  / /_/ /_(_)___  ____ ______
+#     \__ \/ / __/ _ \    \__ \/ _ \/ __/ __/ / __ \/ __ `/ ___/
+#    ___/ / / /_/  __/   ___/ /  __/ /_/ /_/ / / / / /_/ (__  )
+#   /____/_/\__/\___/   /____/\___/\__/\__/_/_/ /_/\__, /____/
+# 
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
