--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ plugins:
 #                        /____/                   
 #
 GoogleAnalytics:          # Add, if you want to track with Google Analytics
-  id: UA-12345678-1        # Required - replace with your tracking id
+  id: G-H305L1HFPH        # Required - replace with your tracking id
   anonymizeIp: false      # Optional - Default: false - set to true for anonymized tracking
 
 
