--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,6 +32,10 @@
   url: "/search/"
   side: right
 
+- title: "Team"
+  url: "/team/"
+  side: right
+
 - title: "Contact"
   url: "/contact/"
   side: right
