--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -3,8 +3,8 @@ name: "CodeQL"
 on:
   push:
     branches: [dev]
-  pull_request:
-    branches: [dev]
+  #pull_request:
+  #  branches: [dev]
   schedule:
     - cron: "40 14 * * 6"
 
