--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,10 +15,11 @@ on:
   push:
     branches: 
       - dev
-  #pull_request:
-  #  # The branches below must be a subset of the branches above
-  #  branches:
-  #    - dev
+      - main
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches:
+      - dev
   schedule:
     - cron: '33 12 * * 6'
 
