--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -13,10 +13,10 @@
   class: icon-linkedin
   title: ""
 
-# - name: Facebook
-#   url: http://www.facebook.com/
-#   class: icon-facebook
-#   title: ""
+- name: Facebook
+  url: https://www.facebook.com/smartcorpinc
+  class: icon-facebook
+  title: ""
 
 # - name: Soundcloud
 #   url: http://soundcloud.com/
